--- a/blockchain.topmonks.com/src/stylesheets/main.css
+++ b/blockchain.topmonks.com/src/stylesheets/main.css
@@ -123,7 +123,7 @@ a {
 }
 
 .nav_bar a:hover {
-  border-color: #DB0F7F;
+  border-color: #D12785;
 }
 
 #logo {
@@ -164,10 +164,13 @@ svg.monk {
 }
 
 a.button {
-  background: linear-gradient(to bottom right, #DB0F7F 0, #FF7E71 80%);
+  background: linear-gradient(to bottom right, #DB0F7F 0, #FF7E71 78%);
   border-radius: 32px;
   padding: 12px 54px;
   color: #fff;
+}
+a.button:hover {
+  box-shadow: 0 0 10px #FF7E71;
 }
 
 .opening_button {
