topmonks.cz code base now up-to-date with topmonks.com

--- a/www.topmonks.cz/src/html/components/case-studies/index.html
+++ b/www.topmonks.cz/src/html/components/case-studies/index.html
@@ -13,23 +13,21 @@
       {% if caseStudiesData.activeCase != 'adler' %}
       <div
         class="tm-case-studies__clients mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
-        <a href="/case-studies/adler">
+        <a href="/jak-pracujeme/adler">
           <div class="tm-case-studies__logo tm-case-studies__logo--adler">
             <div class="tm-bgnd-wrapper">{{macros.sprite('img_logo_adler')}}</div></div>
           <h3>Adler</h3></a>
-        <p>Řešení na míru automatizující proces nákupu, marketingu a prodeje
-          s&nbsp;vizí, že aplikace budou v&nbsp;budoucnu integrovány do jedné komplexní
-          administrativní platformy.</p>
+        <p>Řešení na míru automatizující proces nákupu, marketingu a prodeje s&nbsp;vizí, že aplikace budou v&nbsp;budoucnu integrovány do jedné komplexní administrativní platformy.</p>
       </div>
       {% endif %}
       {% if caseStudiesData.activeCase != 'pricefx' %}
       <div
         class="tm-case-studies__clients mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
-        <div class="tm-case-studies__logo tm-case-studies__logo--pricefx inactive">
-          <div class="tm-bgnd-wrapper">{{macros.sprite('img_logo_pricefx')}}</div></div>
-        <h3>Price f(x)</h3>
-        <p>Poskytnutí profesionální konzultace na podporu služeb rozšiřujících portfolio zákazníků, a zároveň také pomoc
-          při zlepšování UX pro webové stránky.</p>
+        <a href="/jak-pracujeme/price-fx">
+          <div class="tm-case-studies__logo tm-case-studies__logo--pricefx">
+            <div class="tm-bgnd-wrapper">{{macros.sprite('img_logo_pricefx')}}</div></div>
+          <h3>Price f(x)</h3></a>
+        <p>Poskytnutí profesionální konzultace na podporu služeb rozšiřujících portfolio zákazníků, a zároveň také pomoc při zlepšování UX pro webové stránky.</p>
       </div>
       {% endif %}
       {% if caseStudiesData.activeCase != 'cs' %}
