--- a/www.topmonks.cz/src/html/layouts/topmonks.html
+++ b/www.topmonks.cz/src/html/layouts/topmonks.html
@@ -11,12 +11,12 @@
   <link rel="preconnect" href="https://ajax.googleapis.com">
   <link rel="preconnect" href="//res.cloudinary.com">
   <link rel="preconnect" href="//cdnjs.cloudflare.com">
-  <link rel="preconnect" href="//fonts.gstatic.com">
-  <link rel="preconnect" href="//p.typekit.net">
+  <link rel="preconnect" href="//fonts.gstatic.com" crossorigin>
+  <link rel="preconnect" href="//use.typekit.net">
   <link rel="preconnect" href="//cdn.jsdelivr.net">
   <link rel="preconnect" href="//www.google-analytics.com">
   <link rel="preconnect" href="//static.hotjar.com">
-  <link rel="preload" href="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" as="script">
+  <link rel="preload" href="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" as="script" crossorigin>
   <link rel="preload" href="https://use.typekit.net/her1ktw.js" as="script">
   <link rel="preload" href="https://www.googletagmanager.com/gtm.js?id=GTM-WW7T986" as="script">
 
