--- a/blockchain.topmonks.com/src/stylesheets/main.css
+++ b/blockchain.topmonks.com/src/stylesheets/main.css
@@ -169,6 +169,7 @@ a.button {
   padding: 12px 54px;
   color: #fff;
 }
+
 a.button:hover {
   background: none;
   border: 4px solid #fff;;
@@ -184,20 +185,13 @@ a.button:hover {
 .values_bg {
   background: url("/images/values_BG.png") right no-repeat;
 }
+
 .values_title {
   padding-bottom: 0;
 }
 
 #values p {
   text-align: center;
-}
-
-.value_1 {
-  margin-left: 14.5em;
-}
-
-.value_2 {
-  margin-right: 14.5em;
 }
 
 .value_1::before {
@@ -225,6 +219,7 @@ a.button:hover {
 .offer .wrapper {
   --mdc-layout-grid-gutter-desktop: 0;
 }
+
 .offer {
   margin-top: -2.5em;
 }
@@ -235,7 +230,8 @@ a.button:hover {
 
 .offer_box {
   width: 100%;
-  box-shadow: 0 0 20px #d3cdcd;
+  box-shadow: 0 2px 33px rgba(0, 0, 0, .4);
+  stop-opacity: 1%;
   padding: 0 24px;
 }
 
@@ -289,24 +285,27 @@ h3.ICO_bubble::before {
   padding-bottom: 0;
 }
 
-.offer2-box h3{
- text-align: left;
+.offer2-box h3 {
+  text-align: left;
 }
+
+.offer2-box {
+  padding-right: 1em;
+}
+
 .offer2-box_svg {
   margin: 0 auto;
 }
+
 .offer2 svg {
   vertical-align: middle;
   height: 100%;
   width: 120Px;
 }
-/* Security First section */
-.security {
-  margin-bottom: 6em;
-}
 
-.security_first img {
-  position: static;
+/* Security First section */
+.security .wrapper {
+  padding-top: 0;
 }
 
 .security_first h3 {
@@ -322,6 +321,23 @@ h3.ICO_bubble::before {
   position: static;
   margin-right: 6px;
   background: white;
+}
+
+.security_first-boxes {
+  --mdc-layout-grid-gutter-desktop: 0;
+  --mdc-layout-grid-gutter-tablet: 0;
+  line-height: 0;
+}
+
+.security_first img {
+  position: static;
+  width: auto;
+  margin-top: -2.5em;
+}
+
+.security_first-box img {
+  width: auto;
+  margin-left: 0.44em;
 }
 
 /* How we work */
@@ -446,6 +462,7 @@ footer .social-buttons {
 @media (min-width: 1360px) {
   .offer2_bg, .values_bg {
     background-size: 82% 100%;
+    min-height: 250px;
   }
 }
 
@@ -454,6 +471,7 @@ footer .social-buttons {
     background-size: 1120px 320px;
   }
 }
+
 @media (max-width: 1200px) {
   .value_1, .value_2 {
     margin: 0 auto;
@@ -482,7 +500,7 @@ footer .social-buttons {
     display: block;
   }
 
-  .nav_bar li {
+  .nav_bar li, .security_first-box img {
     width: 100%;
   }
 
@@ -506,11 +524,7 @@ footer .social-buttons {
     display: block;
   }
 
-  .hamburger:active .menu {
-    display: none;
-  }
-
-  .hamburger .close {
+  .hamburger:active .menu, .hamburger .close, #navigace, .hidden-box {
     display: none;
   }
 
@@ -518,12 +532,8 @@ footer .social-buttons {
     display: block;
   }
 
-  #logo {
+  #logo, .offer2-box {
     margin: 0 auto;
-  }
-
-  #navigace {
-    display: none;
   }
 
   #navigace:target {
@@ -537,28 +547,23 @@ footer .social-buttons {
     color: purple;
   }
 
-  .values_bg {
-    background: none;
-  }
-
   .welcome h2 {
     font-size: 24px;
   }
 
-  .offer_box-purple {
-    height: 564px;
+  .offer_box-purple, .offer_box-white {
+    height: 468px;
   }
 
   .offer2_bg, .values_bg {
     background-size: 1120px 920px;
   }
-
-  .offer2-box {
-    margin: 0 auto;
+  .security_first-box img {
+    width: 100%;
+    margin-left: 0;
   }
 
 }
-
 
 @media (max-width: 480px) {
   header {
@@ -586,7 +591,7 @@ footer .social-buttons {
     margin-bottom: 2.5em;
   }
 
-  .value_1, .value_2 {
+  .value_1, .value_2, .security_first-box {
     margin: 0 auto;
   }
 
@@ -602,20 +607,12 @@ footer .social-buttons {
     margin-bottom: 0;
   }
 
-  .security p {
+  .security p, .our-work_box {
     width: 100%;
   }
 
   .security_first img {
     left: 8px;
-    width: 100%;
-    margin-top: -3em;
-  }
-  .security_first-box {
-    margin: 0 auto;
-  }
-
-  .our-work_box {
     width: 100%;
   }
 
