--- a/blockchain.topmonks.com/src/stylesheets/main.scss
+++ b/blockchain.topmonks.com/src/stylesheets/main.scss
@@ -435,6 +435,9 @@ footer .social-buttons {
 }
 
 @media (max-width: 768px) {
+  .opening {
+    padding-top: 2em;
+  }
 
   .nav_bar {
     display: block;
