Blockchain křivky svg

--- a/blockchain.topmonks.com/src/stylesheets/main.scss
+++ b/blockchain.topmonks.com/src/stylesheets/main.scss
@@ -357,7 +357,8 @@ h3.ICO_bubble::before {
 }
 
 .our-work_blockstars a {
-  color: #9E55B4;
+  color: #FF7E71;
+  text-decoration: underline;
 }
 
 .our-work_blockstars a:hover {
