--- a/blockchain.topmonks.com/src/stylesheets/header.scss
+++ b/blockchain.topmonks.com/src/stylesheets/header.scss
@@ -40,7 +40,7 @@
   }
   .tm-hamburger__container::after {
     content: "menu";
-    color: rgba(255, 255, 255, 0.5);
+    color: #fff;
     text-transform: uppercase;
     font-size: 13px;
     position: absolute;
