--- a/www.topmonks.com/src/html/components/case-studies/index.html
+++ b/www.topmonks.com/src/html/components/case-studies/index.html
@@ -1,5 +1,6 @@
 {%- import 'macros/helpers.html' as macros -%}
 {{ macros.css('case-studies') }}
+{% set gridSpan = 6 if caseStudiesData.activeCase else 4 %}
 
 <section class="tm-case-studies">
   <div class="mdc-layout-grid">
@@ -12,7 +13,7 @@
       </div>
       {% if caseStudiesData.activeCase != 'adler' %}
       <div
-        class="tm-case-studies__clients mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
+        class="tm-case-studies__clients mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-{{gridSpan}}-desktop">
         <a href="/case-studies/adler">
           <div class="tm-case-studies__logo tm-case-studies__logo--adler">
             <div class="tm-bgnd-wrapper">{{macros.sprite('img_logo_adler')}}</div></div>
@@ -22,7 +23,7 @@
       {% endif %}
       {% if caseStudiesData.activeCase != 'pricefx' %}
       <div
-        class="tm-case-studies__clients mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
+        class="tm-case-studies__clients mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-{{gridSpan}}-desktop">
         <a href="/case-studies/price-fx">
           <div class="tm-case-studies__logo tm-case-studies__logo--pricefx">
             <div class="tm-bgnd-wrapper">{{macros.sprite('img_logo_pricefx')}}</div></div>
@@ -32,11 +33,12 @@
       {% endif %}
       {% if caseStudiesData.activeCase != 'cs' %}
       <div
-        class="tm-case-studies__clients mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
-        <div class="tm-case-studies__logo tm-case-studies__logo--ceska-sporitelna inactive">
-          <div class="tm-bgnd-wrapper">{{macros.sprite('img_logo_cs')}}</div></div>
-        <h3>Česká Spořitelna WebAPI</h3>
-        <p>Custom-made integration platform to be used internally by the bank, but also externally in the form of public API.</p>
+        class="tm-case-studies__clients mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-{{gridSpan}}-desktop">
+        <a href="/case-studies/ceska-sporitelna-web-api/">
+          <div class="tm-case-studies__logo tm-case-studies__logo--ceska-sporitelna">
+            <div class="tm-bgnd-wrapper">{{macros.sprite('img_logo_cs')}}</div></div>
+          <h3>Česká Spořitelna WebAPI</h3></a>
+          <p>Custom-made integration platform to be used internally by the bank, but also externally in the form of public API.</p>
       </div>
       {% endif %}
     </div>
