--- a/www.topmonks.cz/src/html/components/case-studies/index.html
+++ b/www.topmonks.cz/src/html/components/case-studies/index.html
@@ -1,5 +1,6 @@
 {%- import 'macros/helpers.html' as macros -%}
 {{ macros.css('case-studies') }}
+{% set gridSpan = 6 if caseStudiesData.activeCase else 4 %}
 
 <section class="tm-case-studies">
   <div class="mdc-layout-grid">
@@ -12,7 +13,7 @@
       </div>
       {% if caseStudiesData.activeCase != 'adler' %}
       <div
-        class="tm-case-studies__clients mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
+        class="tm-case-studies__clients mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-{{gridSpan}}-desktop">
         <a href="/jak-pracujeme/adler">
           <div class="tm-case-studies__logo tm-case-studies__logo--adler">
             <div class="tm-bgnd-wrapper">{{macros.sprite('img_logo_adler')}}</div></div>
@@ -22,7 +23,7 @@
       {% endif %}
       {% if caseStudiesData.activeCase != 'pricefx' %}
       <div
-        class="tm-case-studies__clients mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
+        class="tm-case-studies__clients mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-{{gridSpan}}-desktop">
         <a href="/jak-pracujeme/price-fx">
           <div class="tm-case-studies__logo tm-case-studies__logo--pricefx">
             <div class="tm-bgnd-wrapper">{{macros.sprite('img_logo_pricefx')}}</div></div>
@@ -32,10 +33,11 @@
       {% endif %}
       {% if caseStudiesData.activeCase != 'cs' %}
       <div
-        class="tm-case-studies__clients mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
-        <div class="tm-case-studies__logo tm-case-studies__logo--ceska-sporitelna inactive">
+        class="tm-case-studies__clients mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-{{gridSpan}}-desktop">
+        <a href="/jak-pracujeme/ceska-sporitelna-web-api/">
+        <div class="tm-case-studies__logo tm-case-studies__logo--ceska-sporitelna">
           <div class="tm-bgnd-wrapper">{{macros.sprite('img_logo_cs')}}</div></div>
-        <h3>Česká Spořitelna WebAPI</h3>
+          <h3>Česká Spořitelna WebAPI</h3></a>
         <p>Zákaznická platforma využívána interně bankami, zároveň externě ve formě veřejné API.</p>
       </div>
       {% endif %}
