--- a/blockchain.topmonks.com/src/stylesheets/main.scss
+++ b/blockchain.topmonks.com/src/stylesheets/main.scss
@@ -94,15 +94,19 @@ a {
   text-align: center;
   text-decoration: none;
 }
+
 ul {
   margin: 1em 0;
 }
-ul, ul li{
+
+ul, ul li {
   padding: 0;
 }
+
 ul li {
   list-style: none;
 }
+
 /* Main_info section */
 .developers {
   background: url("/images/slices_BG.png") center no-repeat;
@@ -130,6 +134,7 @@ a.button:hover {
   border: 4px solid #fff;;
   font-weight: 900;
 }
+
 #contact a.button:hover {
   background: none;
   border: 4px solid #DB0F7F;;
@@ -195,6 +200,7 @@ a.button:hover {
   stop-opacity: 1%;
   padding: 0 24px;
 }
+
 .offer_box ul {
 }
 
@@ -202,6 +208,7 @@ a.button:hover {
   line-height: 1.5;
   font-size: 18px;
 }
+
 .offer_box-purple li::before {
   content: "";
   display: inline-block;
@@ -210,6 +217,7 @@ a.button:hover {
   height: 9px;
   padding-right: 8px;
 }
+
 .offer_box-white li::before {
   content: "";
   display: inline-block;
@@ -287,29 +295,43 @@ h3.ICO_bubble::before {
   padding-top: 0;
 }
 
-.security_first h3 {
-  color: #9B9B9B;
-}
-
-.security_text p {
-  color: #586B78;
-  width: 405px;
-}
-
-.security_text {
-  position: static;
-  margin-right: 6px;
-  background: white;
+.security h3 {
+  color: #000000;
 }
 
 .security_first-boxes {
   --mdc-layout-grid-gutter-desktop: 0;
   --mdc-layout-grid-gutter-tablet: 0;
-  line-height: 0;
+  --mdc-layout-grid-gutter-phone: 0;
+}
+
+.security_first-box {
+  width: 100%;
+  height: 198px;
+  h3 {
+    font-size: 18px;
+  }
 }
 
 .security_first-img svg {
   margin-top: -2.5em;
+}
+
+.security_first-box svg {
+  width: 100%;
+  margin-top: 3.5em;
+}
+
+.security_first-box_white {
+  background-color: #FFFFFF;
+}
+
+.security_first-box_purple {
+  background-color: #4D2F72;
+  h3 {
+    color: #FFFFFF;
+    font-weight: normal;
+  }
 }
 
 /* How we work */
@@ -535,10 +557,17 @@ footer .social-buttons {
   .offer2_bg, .values_bg {
     background-size: 1120px 920px;
   }
+
+  .security_first-box {
+    height: 100%;
+    h3 {
+      font-size: 14px;
+      margin-bottom: 2em;
+    }
+  }
   .security_first-box img {
     width: 100%;
   }
-
 }
 
 @media (max-width: 480px) {
@@ -567,7 +596,7 @@ footer .social-buttons {
     margin-bottom: 2.5em;
   }
 
-  .value_1, .value_2, .security_first-box {
+  .value_1, .value_2 {
     margin: 0 auto;
   }
 
@@ -575,16 +604,16 @@ footer .social-buttons {
     background-size: 600px 700px;
   }
 
-  .security .tm-layout-wrapper {
-    background-color: white;
-  }
-
   .security {
     margin-bottom: 0;
   }
 
-  .security p, .our-work_box {
+  .our-work_box {
     width: 100%;
+  }
+  .security_first-box {
+    margin: 0 auto;
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
   }
 
   .security_first img {
@@ -592,11 +621,16 @@ footer .social-buttons {
     width: 100%;
   }
   .security_first-img svg {
-    margin-top: -6.5em;
     width: 100%;
+    height: 300px;
   }
   .offer2-box {
     padding: 24px;
   }
-
+  .box-1 {
+    order: 1;
+  }
+  .box-2 {
+    order: 2;
+  }
 }
